--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Home<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Page<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
-                    <li><a href="#">Shop<span><i class="fa-solid fa-chevron-down"></i></a></span></li>
+                    <li><a href="#">Shop<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <div>
@@ -30,8 +30,8 @@
             </div>
             <a href="#" class="icon_hamburger"><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/></svg></a>
         </nav>
-        <section>
-            <img src="img/slider/img_bg2.png" alt="best quality food">
+        <section class="contenu_header">
+            <div class="img_header"><img src="img/slider/img_bg2.png" alt="best quality food"></div>
             <h1>BEST QUALITY FOODS</h1>
             <a href="#">Explore our menu<span><i class="fa-solid fa-arrow-right"></i></span></a>
         </section>
