--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kababi</title>
     <script src="https://kit.fontawesome.com/2e43f7e761.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
             <a href="#" class="Kababi_logo"><img src="img/logo/logo.png" alt="logo_Kababi"></a>
             <div class="topnav_menu">
                 <ul class="nav_links">
-                    <li><a href="#">Home<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
+                    <li><a href="#" class="home">Home <span><i class="fa-solid fa-chevron-down"></i></span></a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Page<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
                     <li><a href="#">Shop<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
@@ -24,16 +25,18 @@
                 <div>
                     <ul class="nav_links2">
                         <li><img src="img/slider/appel.png" width="19px" alt=""><a href="#">+012 (345) 6789</a></li>
-                        <li><a href="#" class="btn_nav">BOOK A TABLE</a></li>
+                        <li><a href="#" class="btn_nav">BOOK A TABLE<i class="fa-solid fa-arrow-right"></i></a></li>
                     </ul>
                 </div>
             </div>
             <a href="#" class="icon_hamburger"><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/></svg></a>
         </nav>
         <section class="contenu_header">
-            <div class="img_header"><img src="img/slider/img_bg2.png" alt="best quality food"></div>
-            <h1>BEST QUALITY FOODS</h1>
-            <a href="#">Explore our menu<span><i class="fa-solid fa-arrow-right"></i></span></a>
+            <div class="imgAndtitle">
+                <img src="img/slider/img_bg2.png" alt="best quality food">
+                <h1>BEST QUALITY FOODS</h1>
+            </div>
+            <a href="#">Explore our menu <span><i class="fa-solid fa-arrow-right"></i></span></a>
         </section>
     </div>
     </header>
