suppression des fonts du dossier hamilton

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-        <nav class="topnav" id="topnav">
+        <div class="container_header">
+        <nav class="topnav" id="topnav" role="navigation">
             <a href="#" class="Kababi_logo"><img src="img/logo/logo.png" alt="logo_Kababi"></a>
             <div class="topnav_menu">
                 <ul class="nav_links">
@@ -30,15 +30,20 @@
                 </div>
             </div>
             <a href="#" class="icon_hamburger"><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/></svg></a>
-        </nav>
-        <section class="contenu_header">
-            <div class="imgAndtitle">
-                <img src="img/slider/img_bg2.png" alt="best quality food">
-                <h1>BEST QUALITY FOODS</h1>
-            </div>
-            <a href="#">Explore our menu <span><i class="fa-solid fa-arrow-right"></i></span></a>
-        </section>
-    </div>
+            </nav>
+            <section class="contenu_header">
+                <div class="imgAndtitle">
+                    <img src="../img/slider/img_bg2.png" alt="best quality food">
+                    <h1>BEST QUALITY FOODS</h1>
+                </div>
+                <a href="#">Explore our menu <span><i class="fa-solid fa-arrow-right"></i></span></a>
+            </section>
+        </div>
     </header>
+    <main>
+        <section class="choose_your_best_category">
+
+        </section>
+    </main>
 </body>
 </html>
