--- a/index.html
+++ b/index.html
@@ -1,41 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kababi</title>
-    <script src="https://kit.fontawesome.com/2e43f7e761.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/2e43f7e761.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="latest-news">
+        <div class="latest-news-title">
+          <h2>LATEST NEWS & BLOG</h2>
+          <p>Best foods for you & family</p>
+        </div>
+        <article class="news-container">
+          <div class="news">
+            <img src="" alt="" />
+            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
+            <span
+              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
+            ></span>
+          </div>
+          <div class="news">
+            <img src="" alt="" />
+            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
+            <span
+              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
+            ></span>
+          </div>
+          <div class="news">
+            <img src="" alt="" />
+            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
+            <span
+              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
+            ></span>
+          </div>
+        </article>
+      </section>
+    </main>
     <header>
-        <div class="container">
+      <div class="container">
         <nav class="topnav" id="topnav">
-            <a href="#" class="Kababi_logo"><img src="img/logo/logo.png" alt="logo_Kababi"></a>
-            <div class="topnav_menu">
-                <ul class="nav_links">
-                    <li><a href="#">Home<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Page<span><i class="fa-solid fa-chevron-down"></i></span></a></li>
-                    <li><a href="#">Shop<span><i class="fa-solid fa-chevron-down"></i></a></span></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <div>
-                    <ul class="nav_links2">
-                        <li><img src="img/slider/appel.png" width="19px" alt=""><a href="#">+012 (345) 6789</a></li>
-                        <li><a href="#" class="btn_nav">BOOK A TABLE</a></li>
-                    </ul>
-                </div>
+          <a href="#" class="Kababi_logo"
+            ><img src="img/logo/logo.png" alt="logo_Kababi"
+          /></a>
+          <div class="topnav_menu">
+            <ul class="nav_links">
+              <li>
+                <a href="#"
+                  >Home<span><i class="fa-solid fa-chevron-down"></i></span
+                ></a>
+              </li>
+              <li><a href="#">About</a></li>
+              <li>
+                <a href="#"
+                  >Page<span><i class="fa-solid fa-chevron-down"></i></span
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Shop<span><i class="fa-solid fa-chevron-down"></i></span
+                ></a>
+              </li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <div>
+              <ul class="nav_links2">
+                <li>
+                  <img src="img/slider/appel.png" width="19px" alt="" /><a
+                    href="#"
+                    >+012 (345) 6789</a
+                  >
+                </li>
+                <li><a href="#" class="btn_nav">BOOK A TABLE</a></li>
+              </ul>
             </div>
-            <a href="#" class="icon_hamburger"><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/></svg></a>
+          </div>
+          <a href="#" class="icon_hamburger"
+            ><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z"
+                fill="#FFF"
+                fill-rule="evenodd"
+              /></svg
+          ></a>
         </nav>
         <section>
-            <img src="img/slider/img_bg2.png" alt="best quality food">
-            <h1>BEST QUALITY FOODS</h1>
-            <a href="#">Explore our menu<span><i class="fa-solid fa-arrow-right"></i></span></a>
+          <img src="img/slider/img_bg2.png" alt="best quality food" />
+          <h1>BEST QUALITY FOODS</h1>
+          <a href="#"
+            >Explore our menu<span><i class="fa-solid fa-arrow-right"></i></span
+          ></a>
         </section>
-    </div>
+      </div>
     </header>
-</body>
+    <footer>
+      <div class="footer-title">
+        <img src="./img/logo/logo2.png" alt="" />
+      </div>
+      <div class="footer-links">
+        <div class="footer-link">
+          <h3>About</h3>
+          <ul>
+            <li>Home</li>
+            <li>Our Story</li>
+            <li>The setting</li>
+            <li>The suites</li>
+            <li>Food lists</li>
+          </ul>
+        </div>
+        <div class="footer-link">
+          <h3>Facilities</h3>
+          <ul>
+            <li>The Fontus Spa</li>
+            <li>Experiences</li>
+            <li>Private Functions</li>
+            <li>Gallery, Events</li>
+            <li>Special Offers</li>
+          </ul>
+        </div>
+        <div class="footer-link-input">
+          <h3>Newsletters</h3>
+          <p>
+            Dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
+            incididunt labore et dolore
+          </p>
+          <div class="email-input">
+            <input type="text" placeholder="Enter Email Adress" />
+            <button>
+              <i class="fa-solid fa-arrow-right" style="color: #ffffff"></i>
+            </button>
+          </div>
+        </div>
+        <div class="footer-link">
+          <h3>Contact</h3>
+          <ul>
+            <li>
+              <i class="fa-solid fa-location-dot"></i>56 Main Street, D-Block,
+              2nd Floor, Melbourne, Australia
+            </li>
+            <li><i class="fa-solid fa-envelope-open"></i>support@gmail.com</li>
+            <li><i class="fa-solid fa-phone-flip"></i>+012 (345) 67 899</li>
+            <li><i class="fa-sharp fa-regular fa-clock"></i>08 am - 06 pm</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>
+          Copyright c 2021 The Kababi - Restaurant HTML Template. Designed by
+          <a href="#">Themesflat</a>
+        </p>
+        <img src="./img/footer/iconup@2x.png" alt="" />
+        <div class="footer-socials">
+          <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
