--- a/index.html
+++ b/index.html
@@ -85,29 +85,50 @@
         </div>
         <article class="news-container">
           <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
+            <img src="./img/blog/img3blohhome01.jpg" alt="" />
+            <div class="news-text">
+              <div class="date-user">
+                <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
+                <p><i class="fa-regular fa-calendar"></i> 25 AUG 2021</p>
+              </div>
+              <p>How To Run A UX Audit For Major EdTech Platform Case Study</p>
+              <button>READ MORE <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
           </div>
           <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
+            <img src="./img/blog/img1blohhome01.jpg" alt="" />
+            <div class="news-text">
+              <div class="date-user">
+                <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
+                <p><i class="fa-regular fa-calendar"></i> 25 AUG 2021</p>
+              </div>
+              <p>How To Run A UX For Major EdTech Platform Case Study</p>
+              <button>READ MORE <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
           </div>
           <div class="news">
-            <img src="" alt="" />
-            <span><i class="fa-solid fa-user"></i>BY WILLIAMSON</span>
-            <span
-              >25 AUG 2021 <i class="fa-sharp fa-light fa-calendar-days"></i
-            ></span>
+            <img src="./img/blog/img2blohhome01.jpg" alt="" />
+            <div class="news-text">
+              <div class="date-user">
+                <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
+                <p><i class="fa-regular fa-calendar"></i> 25 AUG 2021</p>
+              </div>
+              <p>Designing With Code A Modern Approach To Development</p>
+              <button>READ MORE <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
           </div>
         </article>
+        <div class="photos">
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </div>
       </section>
     </main>
+
     <footer>
       <div class="footer-title">
         <img src="./img/logo/logo2.png" alt="" />
