Finished news section - still missing responsive

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
             </div>
           </div>
         </article>
-        <div class="photos">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <div class="news-photos">
+          <img src="./img/brand/imgbrand3.png" alt="" />
+          <img src="./img/brand/imgbrand4.png" alt="" />
+          <img src="./img/brand/imgbrand5.png" alt="" />
+          <img src="./img/brand/imgbrand6.png" alt="" />
+          <img src="./img/brand/imgbrand1.png" alt="" />
+          <img src="./img/brand/imgbrand2.png" alt="" />
         </div>
       </section>
     </main>
