section choose your best category presque fini

--- a/index.html
+++ b/index.html
@@ -77,7 +77,45 @@
       </div>
     </header>
     <main>
-      <section class="choose_your_best_category"></section>
+      <section class="choose_your_best_category">
+          <div class="title_choose_your_category">
+            <h2>choose your best category</h2>
+            <p>Best foods for you & family</p>
+          </div>
+          <p class="category_absolute">CATEGORY</p>
+          <div class="cards">
+              <article class="card">
+                <i class="fa-solid fa-burger icon_choose_category"></i>
+                <p>Cheeseburger</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+              <article class="card">
+                <i class="fa-solid fa-pizza-slice icon_choose_category"></i>
+                <p>Pizza Slice</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+              <article class="card">
+                <i class="fa-solid fa-mug-hot icon_choose_category"></i>
+                <p>Coffee-Cup</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+              <article class="card">
+                <i class="fa-solid fa-drumstick-bite icon_choose_category"></i>
+                <p>Chicken-Leg</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+              <article class="card">
+                <i class="fa-solid fa-martini-glass-citrus icon_choose_category"></i>
+                <p>Energy Drink</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+              <article class="card">
+                <i class="fa-solid fa-shrimp icon_choose_category"></i>
+                <p>Schrimp</p>
+                <i class="fa-solid fa-arrow-right"></i>
+              </article>
+          </div>
+      </section>
       <section class="latest-news">
         <div class="latest-news-title">
           <h2>LATEST NEWS & BLOG</h2>
