--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       </div>
     </header>
     <main>
-      <section class="choose_your_best_category"></section>
       <section class="latest-news">
+        <p class="p-top">OUR BLOG</p>
         <div class="latest-news-title">
           <h2>LATEST NEWS & BLOG</h2>
           <p>Best foods for you & family</p>
@@ -86,6 +86,7 @@
         <article class="news-container">
           <div class="news">
             <img src="./img/blog/img3blohhome01.jpg" alt="" />
+
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -97,6 +98,7 @@
           </div>
           <div class="news">
             <img src="./img/blog/img1blohhome01.jpg" alt="" />
+
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -108,6 +110,7 @@
           </div>
           <div class="news">
             <img src="./img/blog/img2blohhome01.jpg" alt="" />
+
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
