Finished chefs section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
       </div>
     </header>
     <main>
+      <section class="restaurant-photos-container">
+        <div class="restaurant-photos-title">
+          <h2>RESTAURANTS PHOTO GALLERY</h2>
+          <p>Best foods for you & family</p>
+        </div>
+        <article class="resto-photos">
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </article>
+      </section>
+      <section class="meet-chefs">
+        <p class="p-top">OUR CHEFS</p>
+        <div class="chefs-title">
+          <h2>MEET PROFESSIONAL CHEFS</h2>
+          <p>Best foods for you & family</p>
+        </div>
+        <article class="chefs-container">
+          <div class="chef-img">
+            <img src="./img/team/img1team.jpg" alt="" />
+          </div>
+          <div class="chef-img">
+            <img src="./img/team/img2team.jpg" alt="" />
+          </div>
+          <div class="chef-img">
+            <img src="./img/team/img3team.jpg" alt="" />
+          </div>
+          <div class="chef-img">
+            <img src="./img/team/img4team.jpg" alt="" />
+          </div>
+        </article>
+      </section>
       <section class="latest-news">
         <p class="p-top">OUR BLOG</p>
         <div class="latest-news-title">
