responsive terminé de la section choose your category et section why choose us

--- a/index.html
+++ b/index.html
@@ -116,6 +116,28 @@
               </article>
           </div>
       </section>
+      <section class="why_choose_us">
+        <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
+        <section class="images_top_choose_us">
+          <img src="img/gallery/imgfood1.png" alt="crêpes">
+          <img src="img/gallery/imgfood3.png" alt="Des oeufs">
+        </section>
+        <section class="about_us">
+          <p class="about_us_absolute">About US</p>
+          <div class="title_about_us">
+            <h2>Why choose us</h2>
+            <p>Best foods for you & family</p>
+            <img src="img/about-us/iconbgabout.png" class="icon_about_absolute" alt="">
+          </div> 
+          <article class="contenu_about_us">
+            <img src="img/about-us/img_aboutus_home1.jpg" alt="">
+            <div class="text_about_us">
+              <p>Set ut perspiciatis unde omnis iste natus error sit voluptatem accusatium doloremque laudantium totam opeam eaque ipsa quae abillo invtore verttis et quasi architecto veatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quiluptas</p>
+              <a href="#" class="btn_about_us">Discover more<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+          </article>
+        </section>
+      </section>
       <section class="latest-news">
         <div class="latest-news-title">
           <h2>LATEST NEWS & BLOG</h2>
