Finished photo gallery section, still missing the responsive -1300px

--- a/index.html
+++ b/index.html
@@ -78,18 +78,26 @@
     </header>
     <main>
       <section class="restaurant-photos-container">
+        <p class="p-low">Gallery</p>
         <div class="restaurant-photos-title">
           <h2>RESTAURANTS PHOTO GALLERY</h2>
           <p>Best foods for you & family</p>
         </div>
         <article class="resto-photos">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+          <img src="./img/gallery/img1gallerybox.jpg" alt="" />
+          <div class="photos-together">
+            <img src="./img/gallery/img2gallerybox.jpg" alt="" />
+            <img src="./img/gallery/img3gallerybox.jpg" alt="" />
+          </div>
+          <div class="photos-together">
+            <img src="./img/gallery/img4gallerybox.jpg" alt="" />
+            <img src="./img/gallery/img5gallerybox.jpg" alt="" />
+          </div>
+          <img src="./img/gallery/img6gallerybox.jpg" alt="" />
         </article>
+        <button>
+          VIEW MORE PHOTOS <span><i class="fa-solid fa-arrow-right"></i></span>
+        </button>
       </section>
       <section class="meet-chefs">
         <p class="p-top">OUR CHEFS</p>
