Modded sections responsiveness

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     <main>
       <section class="restaurant-photos-container">
-        <p class="p-low">Gallery</p>
+        <p class="p-low">GALLERY</p>
         <div class="restaurant-photos-title">
           <h2>RESTAURANTS PHOTO GALLERY</h2>
           <p>Best foods for you & family</p>
