--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </button>
           </div>
         </div>
-        <div class="footer-link">
+        <div class="footer-link contact">
           <h3>Contact</h3>
           <ul>
             <li>
