--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kababi</title>
-    <script
-      src="https://kit.fontawesome.com/2e43f7e761.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/2e43f7e761.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
@@ -16,73 +13,62 @@
     <header>
       <div class="container_header">
         <nav class="topnav" id="topnav" role="navigation">
-          <a href="#" class="Kababi_logo"
-            ><img src="img/logo/logo.png" alt="logo_Kababi"
-          /></a>
+          <a href="#" class="Kababi_logo">
+            <img src="img/logo/logo.png" alt="logo_Kababi"/>
+          </a>
           <div class="topnav_menu">
             <ul class="nav_links">
               <li>
-                <a href="#" class="home"
-                  >Home <span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
-              </li>
-              <li><a href="#">About</a></li>
-              <li>
-                <a href="#"
-                  >Page<span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
+                <a href="#" class="home">Home<i class="fa-solid fa-chevron-down"></i></a>
               </li>
               <li>
-                <a href="#"
-                  >Shop<span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
+                <a href="#">About</a>
               </li>
-              <li><a href="#">Contact</a></li>
+              <li>
+              <a href="#">Page<i class="fa-solid fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Shop<i class="fa-solid fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
             </ul>
             <div>
               <ul class="nav_links2">
                 <li>
-                  <img src="img/slider/appel.png" width="19px" alt="" /><a
-                    href="#"
-                    >+012 (345) 6789</a
-                  >
+                  <img src="img/slider/appel.png" width="19px" alt="Téléphone">
+                  <a href="#">+012 (345) 6789</a>
                 </li>
                 <li>
-                  <a href="#" class="btn_nav"
-                    >BOOK A TABLE<i class="fa-solid fa-arrow-right"></i
-                  ></a>
+                  <a href="#" class="btn_nav">BOOK A TABLE<i class="fa-solid fa-arrow-right"></i></a>
                 </li>
               </ul>
             </div>
           </div>
-          <a href="#" class="icon_hamburger"
-            ><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z"
-                fill="#FFF"
-                fill-rule="evenodd"
-              /></svg
-          ></a>
+          <a href="#" class="icon_hamburger">
+            <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
+              <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/>
+            </svg>
+          </a>
         </nav>
         <section class="contenu_header">
           <div class="imgAndtitle">
-            <img src="../img/slider/img_bg2.png" alt="best quality food" />
+            <img src="img/slider/img_bg2.png" alt="best quality food">
             <h1>BEST QUALITY FOODS</h1>
           </div>
-          <a href="#"
-            >Explore our menu
-            <span><i class="fa-solid fa-arrow-right"></i></span
-          ></a>
+          <a href="#">Explore our menu <i class="fa-solid fa-arrow-right"></i></a>
         </section>
       </div>
     </header>
     <main>
+      <section class="bg_color">
       <section class="choose_your_best_category">
-          <div class="title_choose_your_category">
-            <h2>choose your best category</h2>
-            <p>Best foods for you & family</p>
-          </div>
-          <p class="category_absolute">CATEGORY</p>
+        <p class="category_absolute">CATEGORY</p>
+        <div class="title_choose_your_category">
+          <h2>choose your best category</h2>
+          <p>Best foods for you & family</p>
+        </div>
           <div class="cards">
               <article class="card">
                 <i class="fa-solid fa-burger icon_choose_category"></i>
@@ -96,7 +82,7 @@
               </article>
               <article class="card">
                 <i class="fa-solid fa-mug-hot icon_choose_category"></i>
-                <p>Coffee-Cup</p>
+                <p>Coffee-Cup</p
                 <i class="fa-solid fa-arrow-right"></i>
               </article>
               <article class="card">
@@ -116,6 +102,7 @@
               </article>
           </div>
       </section>
+    </section>
       <section class="why_choose_us">
         <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
         <section class="images_top_choose_us">
@@ -136,6 +123,73 @@
               <a href="#" class="btn_about_us">Discover more<i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </article>
+        </section>
+        <section class="try_your_special_offer">
+          <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain">
+          <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak">
+          <span class="our_menu_absolute">OUR MENU</span>
+          <div class="title_special_offer">
+            <h2>Try our special offer</h2>
+            <p>Best foods for you & family</p>
+          </div>
+          <div class="contenu_try_your_special_offer">
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Raw Scallops From Erquy</h3>
+                <p>Candied jerusalem artichokes, truffle</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Corrèze Pan-seared Veal Liver</h3>
+                <p>Olive oil mashed potato, onion jus</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Celeriac and Truffle Ravioli</h3>
+                <p>Roasted langoustine, consommé</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Grilled Veal Filet Mignon</h3>
+                <p>Pumpkin, endives with hazelnuts</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Cod Filet Cooked on One Slide</h3>
+                <p>Chorizo, chickpea espuma, pequillos</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Tender Octopus and Fennel</h3>
+                <p>citrus, wild rocjet condiment</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Sea Bass Ceviche</h3>
+                <p>Avocado, butternut, lime</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+            <article class="cards">
+              <div class="text_cards">
+                <h3>Viennese Veal Cutlet</h3>
+                <p>Ricotta and spinach gnocchi, Caccio de Pepe</p>
+              </div>
+              <p class="prix">89</p>
+            </article>
+          </div>
         </section>
       </section>
       <section class="latest-news">
