--- a/index.html
+++ b/index.html
@@ -19,70 +19,75 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header>
-      <div class="container_header">
-        <nav class="topnav" id="topnav" role="navigation">
-          <a href="#" class="Kababi_logo"
-            ><img src="img/logo/logo.png" alt="logo_Kababi"
-          /></a>
-          <div class="topnav_menu">
-            <ul class="nav_links">
-              <li>
-                <a href="#" class="home"
-                  >Home <span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
-              </li>
-              <li><a href="#">About</a></li>
-              <li>
-                <a href="#"
-                  >Page<span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
-              </li>
-              <li>
-                <a href="#"
-                  >Shop<span><i class="fa-solid fa-chevron-down"></i></span
-                ></a>
-              </li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-            <div>
-              <ul class="nav_links2">
-                <li>
-                  <img src="img/slider/appel.png" width="19px" alt="" /><a
-                    href="#"
-                    >+012 (345) 6789</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="btn_nav"
-                    >BOOK A TABLE<i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <a href="#" class="icon_hamburger"
-            ><svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z"
-                fill="#FFF"
-                fill-rule="evenodd"
-              /></svg
-          ></a>
-        </nav>
-        <section class="contenu_header">
-          <div class="imgAndtitle">
-            <img src="../img/slider/img_bg2.png" alt="best quality food" />
-            <h1>BEST QUALITY FOODS</h1>
-          </div>
-          <a href="#"
-            >Explore our menu
-            <span><i class="fa-solid fa-arrow-right"></i></span
-          ></a>
-        </section>
-      </div>
-    </header>
+   
     <main>
+                           <section class="try_your_special_offer">
+        <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
+        <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
+        <p class="our_menu_absolute">OUR MENU</p>
+        <div class="title_special_offer">
+          <h2>Try our special offer</h2>
+          <p>Best foods for you & family</p>
+        </div>
+        <div class="contenu_try_your_special_offer">
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Raw Scallops From Erquy</h3>
+              <p>Candied jerusalem artichokes, truffle</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Corrèze Pan-seared Veal Liver</h3>
+              <p>Olive oil mashed potato, onion jus</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Celeriac and Truffle Ravioli</h3>
+              <p>Roasted langoustine, consommé</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Grilled Veal Filet Mignon</h3>
+              <p>Pumpkin, endives with hazelnuts</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Cod Filet Cooked on One Slide</h3>
+              <p>Chorizo, chickpea espuma, pequillos</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Tender Octopus and Fennel</h3>
+              <p>citrus, wild rocjet condiment</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Sea Bass Ceviche</h3>
+              <p>Avocado, butternut, lime</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+          <article class="cards">
+            <div class="text_cards">
+              <h3>Viennese Veal Cutlet</h3>
+              <p>Ricotta and spinach gnocchi, Caccio de Pepe</p>
+            </div>
+            <p class="prix">89</p>
+          </article>
+        </div>
+      </section>
       <section class="restaurant-photos-container">
         <p class="p-low">GALLERY</p>
         <div class="restaurant-photos-title">
