--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <!-- <header>
+  <header>
       <div class="container_header">
         <nav class="topnav" id="topnav" role="navigation">
           <a href="#" class="Kababi_logo">
@@ -77,9 +77,9 @@
           ></a>
         </section>
       </div>
-    </header> -->
+    </header>
     <main>
-      <!-- <section class="bg_color">
+      <section class="bg_color">
         <section class="choose_your_best_category">
           <p class="category_absolute">CATEGORY</p>
           <div class="title_choose_your_category">
@@ -121,8 +121,8 @@
             </article>
           </div>
         </section>
-      </section> -->
-      <!-- <section class="why_choose_us">
+      </section> 
+      <section class="why_choose_us">
         <img
           class="circle_food"
           src="img/gallery/imgfood2.jpg"
@@ -158,7 +158,7 @@
             </div>
           </article>
         </section>
-      </section> -->
+      </section> 
       <section class="try_your_special_offer">
         <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
         <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
