ajout des descriptions d'images

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
           </div>
       </section>
     </section>
-      <section class="why_choose_us">
-        <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
+    <section class="why_choose_us">
+      <img class="circle_food" src="img/gallery/imgfood2.jpg" alt="saumon fumé avocat concombre roquette">
       <section class="images_top_choose_us">
-      <img src="img/gallery/imgfood1.png" alt="crêpes">
-      <img src="img/gallery/imgfood3.png" alt="Des oeufs">
+        <img src="img/gallery/imgfood1.png" alt="crêpes">
+        <img src="img/gallery/imgfood3.png" alt="Des oeufs">
       </section>
       <section class="about_us">
           <p class="about_us_absolute">About US</p>
@@ -123,8 +123,8 @@
               <a href="#" class="btn_about_us">Discover more<i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </article>
-        </section>
-        </section>
+      </section>
+    </section>
     <section class="try_your_special_offer">
         <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
         <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
@@ -199,16 +199,16 @@
           <p>Best foods for you & family</p>
         </div>
         <article class="resto-photos">
-          <img src="./img/gallery/img1gallerybox.jpg" alt="" />
+          <img src="./img/gallery/img1gallerybox.jpg" alt="pâtes, oeuf, surimi et crudités">
           <div class="photos-together">
-            <img src="./img/gallery/img2gallerybox.jpg" alt="" />
-            <img src="./img/gallery/img3gallerybox.jpg" alt="" />
+            <img src="./img/gallery/img2gallerybox.jpg" alt="sandwich">
+            <img src="./img/gallery/img3gallerybox.jpg" alt="pizza">
           </div>
           <div class="photos-together">
-            <img src="./img/gallery/img4gallerybox.jpg" alt="" />
-            <img src="./img/gallery/img5gallerybox.jpg" alt="" />
+            <img src="./img/gallery/img4gallerybox.jpg" alt="pâtes, tomates cerises">
+            <img src="./img/gallery/img5gallerybox.jpg" alt="steak">
           </div>
-          <img src="./img/gallery/img6gallerybox.jpg" alt="" />
+          <img src="./img/gallery/img6gallerybox.jpg" alt="hamburger et frites">
         </article>
         <button>
           VIEW MORE PHOTOS <span><i class="fa-solid fa-arrow-right"></i></span>
@@ -222,16 +222,16 @@
         </div>
         <article class="chefs-container">
           <div class="chef-img">
-            <img src="./img/team/img1team.jpg" alt="" />
+            <img src="./img/team/img1team.jpg" alt="chef cuistot" />
           </div>
           <div class="chef-img">
-            <img src="./img/team/img2team.jpg" alt="" />
+            <img src="./img/team/img2team.jpg" alt="chef cuistot" />
           </div>
           <div class="chef-img">
-            <img src="./img/team/img3team.jpg" alt="" />
+            <img src="./img/team/img3team.jpg" alt="chef cuistot" />
           </div>
           <div class="chef-img">
-            <img src="./img/team/img4team.jpg" alt="" />
+            <img src="./img/team/img4team.jpg" alt="chef cuistot" />
           </div>
         </article>
       </section>
@@ -243,8 +243,7 @@
         </div>
         <article class="news-container">
           <div class="news">
-            <img src="./img/blog/img3blohhome01.jpg" alt="" />
-
+            <img src="./img/blog/img3blohhome01.jpg" alt="Homme entrain d'écrire"
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -255,8 +254,7 @@
             </div>
           </div>
           <div class="news">
-            <img src="./img/blog/img1blohhome01.jpg" alt="" />
-
+            <img src="./img/blog/img1blohhome01.jpg" alt="Femme faisant goûter son plat à un homme" />
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -267,8 +265,7 @@
             </div>
           </div>
           <div class="news">
-            <img src="./img/blog/img2blohhome01.jpg" alt="" />
-
+            <img src="./img/blog/img2blohhome01.jpg" alt="Femme mangeant des pâtes">
             <div class="news-text">
               <div class="date-user">
                 <p><i class="fa-solid fa-user"></i> BY WILLIAMSON</p>
@@ -280,19 +277,18 @@
           </div>
         </article>
         <div class="news-photos">
-          <img src="./img/brand/imgbrand3.png" alt="" />
-          <img src="./img/brand/imgbrand4.png" alt="" />
-          <img src="./img/brand/imgbrand5.png" alt="" />
-          <img src="./img/brand/imgbrand6.png" alt="" />
-          <img src="./img/brand/imgbrand1.png" alt="" />
-          <img src="./img/brand/imgbrand2.png" alt="" />
+          <img src="./img/brand/imgbrand3.png" alt="cuillère, fourchette, couteau" >
+          <img src="./img/brand/imgbrand4.png" alt="fourchette, couteau sur une assiette" >
+          <img src="./img/brand/imgbrand5.png" alt="cloche sur une main" >
+          <img src="./img/brand/imgbrand6.png" alt="toque de cuisinier" >
+          <img src="./img/brand/imgbrand1.png" alt="fourchette et couteau croisés sur une assiette" >
+          <img src="./img/brand/imgbrand2.png" alt="cuillère, fourchette, couteau" >
         </div>
       </section>
     </main>
-
     <footer>
       <div class="footer-title">
-        <img src="./img/logo/logo2.png" alt="" />
+        <img src="./img/logo/logo2.png" alt="Logo kakabi" />
       </div>
       <div class="footer-links">
         <div class="footer-link">
@@ -322,7 +318,7 @@
             incididunt labore et dolore
           </p>
           <div class="email-input">
-            <input type="text" placeholder="Enter Email Adress" />
+            <input type="text" placeholder="Enter Email Adress">
             <button>
               <i class="fa-solid fa-arrow-right" style="color: #ffffff"></i>
             </button>
@@ -346,7 +342,7 @@
           Copyright c 2021 The Kababi - Restaurant HTML Template. Designed by
           <a href="#">Themesflat</a>
         </p>
-        <img src="./img/footer/iconup@2x.png" alt="" />
+        <img src="./img/footer/iconup@2x.png" alt="Cuillère" />
         <div class="footer-socials">
           <a href=""><i class="fa-brands fa-facebook-f"></i></a>
           <a href=""><i class="fa-brands fa-twitter"></i></a>
