Fixes burguer display and a few SASS/CSS mods

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         </section>
         <section class="about_us">
           <p class="about_us_absolute">About US</p>
+          <img
+            src="img/about-us/iconbgabout.png"
+            class="icon_about_absolute"
+            alt=""
+          />
           <div class="title_about_us">
             <h2>Why choose us</h2>
             <p>Best foods for you & family</p>
-            <img
-              src="img/about-us/iconbgabout.png"
-              class="icon_about_absolute"
-              alt=""
-            />
           </div>
           <article class="contenu_about_us">
             <img src="img/about-us/img_aboutus_home1.jpg" alt="" />
@@ -152,9 +152,9 @@
                 abillo invtore verttis et quasi architecto veatae vitae dicta
                 sunt explicabo. Nemo enim ipsam voluptatem quiluptas
               </p>
-              <a href="#" class="btn_about_us"
-                >Discover more<i class="fa-solid fa-arrow-right"></i
-              ></a>
+              <button class="btn_about_us">
+                Discover more<i class="fa-solid fa-arrow-right"></i>
+              </button>
             </div>
           </article>
         </section>
