--- a/index.html
+++ b/index.html
@@ -173,56 +173,56 @@
               <h3>Raw Scallops From Erquy</h3>
               <p>Candied jerusalem artichokes, truffle</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Corrèze Pan-seared Veal Liver</h3>
               <p>Olive oil mashed potato, onion jus</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Celeriac and Truffle Ravioli</h3>
               <p>Roasted langoustine, consommé</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Grilled Veal Filet Mignon</h3>
               <p>Pumpkin, endives with hazelnuts</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Cod Filet Cooked on One Slide</h3>
               <p>Chorizo, chickpea espuma, pequillos</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Tender Octopus and Fennel</h3>
               <p>citrus, wild rocjet condiment</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Sea Bass Ceviche</h3>
               <p>Avocado, butternut, lime</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
           <article class="cards">
             <div class="text_cards">
               <h3>Viennese Veal Cutlet</h3>
               <p>Ricotta and spinach gnocchi, Caccio de Pepe</p>
             </div>
-            <p class="prix">89</p>
+            <p class="prix">$89</p>
           </article>
         </div>
       </section>
