Added try our special offer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </article>
         </section>
       </section>
-      <!-- <section class="try_your_special_offer">
+      <section class="try_your_special_offer">
         <p class="our_menu_absolute">OUR MENU</p>
         <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
         <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
@@ -225,7 +225,7 @@
             <p class="prix">$89</p>
           </article>
         </div>
-      </section> -->
+      </section>
       <section class="restaurant-photos-container">
         <p class="p-low">GALLERY</p>
         <div class="restaurant-photos-title">
