--- a/index.html
+++ b/index.html
@@ -142,11 +142,6 @@
           <div class="title_about_us">
             <h2>Why choose us</h2>
             <p>Best foods for you & family</p>
-            <img
-              src="img/about-us/iconbgabout.png"
-              class="icon_about_absolute"
-              alt=""
-            />
           </div>
           <article class="contenu_about_us">
             <img src="img/about-us/img_aboutus_home1.jpg" alt="" />
@@ -157,14 +152,15 @@
                 abillo invtore verttis et quasi architecto veatae vitae dicta
                 sunt explicabo. Nemo enim ipsam voluptatem quiluptas
               </p>
-              <a href="#" class="btn_about_us"
-                >Discover more<i class="fa-solid fa-arrow-right"></i
-              ></a>
+              <button class="btn_about_us">
+                Discover more<i class="fa-solid fa-arrow-right"></i>
+              </button>
             </div>
           </article>
         </section>
       </section>
       <section class="try_your_special_offer">
+        <p class="our_menu_absolute">OUR MENU</p>
         <img class="pain" src="img/our-menu/imgbg-our-menu.jpg" alt="pain" />
         <img src="img/our-menu/img2bg-our-menu.jpg" alt="steak" class="steak" />
         <div class="title_special_offer">
@@ -231,8 +227,8 @@
         </div>
       </section>
       <section class="restaurant-photos-container">
-        <p class="p-low">GALLERY</p>
         <div class="restaurant-photos-title">
+          <p class="p-low">GALLERY</p>
           <h2>RESTAURANTS PHOTO GALLERY</h2>
           <p>Best foods for you & family</p>
         </div>
@@ -262,8 +258,8 @@
         </button>
       </section>
       <section class="meet-chefs">
-        <p class="p-top">OUR CHEFS</p>
         <div class="chefs-title">
+          <p class="p-top">OUR CHEFS</p>
           <h2>MEET PROFESSIONAL CHEFS</h2>
           <p>Best foods for you & family</p>
         </div>
@@ -283,8 +279,8 @@
         </article>
       </section>
       <section class="latest-news">
-        <p class="p-top">OUR BLOG</p>
         <div class="latest-news-title">
+          <p class="p-top">OUR BLOG</p>
           <h2>LATEST NEWS & BLOG</h2>
           <p>Best foods for you & family</p>
         </div>
